--- a/package.json
+++ b/package.json
@@ -55,5 +55,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26"
   },
-  "homepage": "https://Coral272.github.io/react-masterclass"
+  "homepage": "https://Coral272.github.io/react-masterclass/"
 }
