--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.14",
     "apexcharts": "^3.37.3",
-    "gh-pages": "^5.0.0",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-dom": "^18.2.0",
@@ -53,7 +52,8 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
     "@types/react-router-dom": "^5.3.3",
-    "@types/styled-components": "^5.1.26"
+    "@types/styled-components": "^5.1.26",
+    "gh-pages": "^5.0.0"
   },
   "homepage": "https://Coral272.github.io/react-masterclass/"
 }
