--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://Coral272.github.io/react-masterclass",
   "name": "react-masterclass",
   "version": "0.1.0",
   "private": true,
@@ -54,6 +55,5 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/styled-components": "^5.1.26",
     "gh-pages": "^5.0.0"
-  },
-  "homepage": "https://Coral272.github.io/react-masterclass/"
+  }
 }
