modified build setting

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Coral272.github.io/react-masterclass",
+  "homepage": "https://coral272.github.io/coin-tracker",
   "name": "react-masterclass",
   "version": "0.1.0",
   "private": true,
